add referenzen and job components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,430 +1,3 @@
 <app-navbar></app-navbar>
-
-<!-- Hero Slider -->
-<section class="text-center pt-lg-0 hero-home" id="hero">
-  <div class="swiper hero-slider">
-    <div class="swiper-wrapper">
-      <div
-        class="swiper-slide hero-slide bg-cover py-5 with-border-image d-flex align-items-center"
-        style="background: url(assets/img/Building-Wallpapers-HD.jpg)"
-      >
-        <div class="container text-white py-5 my-5 index-forward">
-          <h1 class="text-uppercase text-xl mt-5">M&K Elektroplanung GmbH</h1>
-          <div class="row">
-            <div class="col-lg-7 mx-auto">
-              <p class="lead">
-                Unser Büro wurde am 13. August 1991 gegründet. Seit der Gründung
-                haben wir eine große Zahl an Maßnahmen realisiert. Dabei
-                handelte es sich um Rekonstruktions- und Sanierungsmaßnhamen als
-                auch um Neubauten.
-              </p>
-              <a class="btn btn-primary px-4" href="">Mehr Infos</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="swiper-slide hero-slide bg-cover py-5 with-border-image d-flex align-items-center"
-        style="background: url(assets/img/header-1-d2347085.jpg)"
-      >
-        <div class="container text-white py-5 my-5 index-forward">
-          <h1 class="text-uppercase text-xl mt-5">M&K Elektroplanung GmbH</h1>
-          <div class="row">
-            <div class="col-lg-7 mx-auto">
-              <p class="lead">
-                Uns stehen gut ausgebildete Mitarbeiter mit hoher Motivation zur
-                Realisierung Ihrer Aufgaben zur Verfügung. Auf Grund
-                regelmäßiger Schulungen beispielsweise durch den VDE oder den
-                ZVEI.
-              </p>
-              <a class="btn btn-primary px-4" href="">Mehr Infos</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="swiper-slide hero-slide bg-cover py-5 with-border-image d-flex align-items-center"
-        style="
-          background: url(assets/img/Tower-building-1920x1080-wallpaper.jpg);
-        "
-      >
-        <div class="container text-white py-5 my-5 index-forward">
-          <h1 class="text-uppercase text-xl mt-5">M&K Elektroplanung GmbH</h1>
-          <div class="row">
-            <div class="col-lg-7 mx-auto">
-              <p class="lead">
-                Die Anzahl zufriedener Kunden mit anspruchsvollen Aufgaben
-                bestätigt unsere Firmenphilosophie, jeden Auftrag zuverlässig,
-                engagiert und mit Fachkompetenz zur Zufriedenheit unserer Kunden
-                auszuführen.
-              </p>
-              <button class="btn btn-primary px-4" href="">Mehr Infos</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="swiper-button-next swiper-nav-custom d-none d-lg-block"></div>
-    <div class="swiper-button-prev swiper-nav-custom d-none d-lg-block"></div>
-    <div class="swiper-pagination py-3 d-block d-lg-none"></div>
-  </div>
-</section>
-<!-- Features Section-->
-<section id="features">
-  <div class="container-fluid p-0">
-    <div class="row p-0 text-center align-items-stretch g-0">
-      <div class="col-lg-3 col-md-6">
-        <div class="p-5 text-white h-100 bg-primary-shade">
-          <h3 class="h4">Ansprechpartner</h3>
-          <p class="mb-0 text-small">
-            Dipl.-Ing. (FH) <br />
-            Carsten Köhler
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <div class="p-5 text-primary h-100 bg-light">
-          <h3 class="h4">Ansprechpartner</h3>
-          <p class="mb-0 text-small">
-            Dipl.-Ing. (FH) <br />
-            Carsten Köhler
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <div class="p-5 text-white h-100 bg-primary-shade">
-          <h3 class="h4">Ansprechpartner</h3>
-          <p class="mb-0 text-small">
-            Dipl.-Ing. (FH) <br />
-            Carsten Köhler
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <div class="p-5 text-primary h-100 bg-light">
-          <h3 class="h4">Ansprechpartner</h3>
-          <p class="mb-0 text-small">
-            Dipl.-Ing. (FH) <br />
-            Carsten Köhler
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Services Section -->
-<section class="py-5" id="service">
-  <div class="container py-5">
-    <header class="mb-4 text-center mb-5">
-      <p class="text-serif mb-0 text-primary">24/7 Notdienst anrufen</p>
-      <h2 class="text-uppercase">Unser Service für Sie</h2>
-    </header>
-    <div class="row text-center gy-4">
-      <div class="col-lg-4">
-      <!--  <a href="" class="icon-block"> </a> -->
-        <i class="fas text-primary mb-4 fa-3x fa-handshake"></i>
-        <h3 class="h5">Beratung</h3>
-        <p class="text-muted">
-          In einem ersten Gespräch zwischen Ihnen und uns, dem Elektroplaner,
-          werden vor Ort die Grundlagen, also der Ist-Zustand, ermittelt.
-        </p>
-      </div>
-      <div class="col-lg-4">
-        <i class="fas text-primary mb-4 fa-3x fa-tasks"></i>
-        <h3 class="h5">Planung</h3>
-        <p class="text-muted">
-          Die erfolgreiche Beratung liefert die Basis für die darauf folgende
-          Planung. Die Planung wird entsprechend der HOAI in verschiedene
-          Leistungsphasen aufgeteilt.
-        </p>
-      </div>
-      <div class="col-lg-4">
-        <i class="fas text-primary mb-4 fa-3x fa-search"></i>
-        <h3 class="h5">Bauüberwachung</h3>
-        <p class="text-muted">
-          Wir prüfen die Ausführung durch den von Ihnen bestimmten Auftragnehmer
-          auf Übereinstimmung mit den Ausführungsplänen, den
-          Leistungsbeschreibungen und den allgemein anerkannten Regeln der
-          Technik.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Team Section-->
-<section id="team">
-  <div class="container-fluid px-0">
-    <div class="row align-items-stretch">
-      <div
-        class="col-lg-6 half-page-banner bg-cover"
-        style="background: url(assets/img/team.jpg)"
-      ></div>
-      <div class="col-lg-6 bg-light py-lg-5">
-        <div class="h-100 d-flex flex-column p-5 justify-content-center">
-          <p class="text-serif text-primary mb-0">So finden Sie uns</p>
-          <h2 class="text-uppercase">Unser Büro</h2>
-          <p class="text-muted">
-            Lorem ipsum dolor sit amet, consectetur elit sed do eiusmod tempor
-            incididunt labore.
-          </p>
-          <ul class="list-check ps-0">
-            <li>
-              <p class="mb-0 text-muted mb-2">
-                Eu vim atqui ludus petentium, suas idque est id.
-              </p>
-            </li>
-            <li>
-              <p class="mb-0 text-muted mb-2">
-                Ne veniam oblique propriae vim, dicant.
-              </p>
-            </li>
-            <li>
-              <p class="mb-0 text-muted mb-2">
-                Sed everti utroque, vis ea oblique pertinax con.
-              </p>
-            </li>
-          </ul>
-          <img class="mb-3" src="img/signature.png" alt="..." width="90" />
-          <h6 class="text-uppercase mb-0">Carsten Köhler</h6>
-          <p class="text-serif text-primary text-small mb-0">Dipl.-Ing. (FH)</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Events Section-->
-<section class="py-5">
-  <div class="container py-5">
-    <header class="mb-4 text-center mb-5">
-      <p class="text-serif mb-0 text-primary">EGAL! Wir machen das jetzt!</p>
-      <h2 class="text-uppercase">Aktuelle Projekte</h2>
-    </header>
-    <div class="p-4 p-lg-5 bg-light text-center mb-4">
-      <div class="row gy-4 align-items-center">
-        <div class="col-lg-3">
-          <div
-            class="d-flex align-items-center justify-content-center justify-content-lg-start">
-            <p class="text-gray text-xl h1 mb-0">17</p>
-            <div class="ms-2">
-              <h5 class="mb-0">April</h5>
-              <p class="text-small mb-0 text-muted">Samstag</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 text-center">
-          <h4 class="text-primary mb-1">
-            <a class="reset-anchor" href="">Bildungseinrichtungen</a>
-          </h4>
-          <p class="text-serif mb-0 text-muted">
-            Erweiterung des Karl-Schmitt-Rottluff Gymnasiums mit Mensa Chemnitz
-          </p>
-          <p class="text-serif mb-0 text-muted">New York</p>
-        </div>
-        <div class="col-lg-3 text-lg-end">
-          <a class="btn btn-outline-primary px-4" href="">Mehr Infos</a>
-        </div>
-      </div>
-    </div>
-    <div class="p-4 p-lg-5 bg-light text-center mb-4">
-      <div class="row gy-4 align-items-center">
-        <div class="col-lg-3">
-          <div
-            class="d-flex align-items-center justify-content-center justify-content-lg-start">
-            <p class="text-gray text-xl h1 mb-0">17</p>
-            <div class="ms-2">
-              <h5 class="mb-0">April</h5>
-              <p class="text-small mb-0 text-muted">Samstag</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 text-center">
-          <h4 class="text-primary mb-1">
-            <a class="reset-anchor" href="">Bildungseinrichtungen</a>
-          </h4>
-          <p class="text-serif mb-0 text-muted">
-            Erweiterung des Karl-Schmitt-Rottluff Gymnasiums mit Mensa Chemnitz
-          </p>
-          <p class="text-serif mb-0 text-muted">New York</p>
-        </div>
-        <div class="col-lg-3 text-lg-end">
-          <a class="btn btn-outline-primary px-4" href="">Mehr Infos</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- WHZ Section-->
-<section id="karriere">
-  <div class="container-fluid px-0">
-    <div class="row align-items-stretch">
-      <div class="col-lg-6 bg-light py-lg-5 order-2 order-lg-1">
-        <div
-          class="h-100 d-flex flex-column p-5 justify-content-center text-lg-end"
-        >
-          <div class="w-100">
-            <p class="text-serif text-primary mb-0">Elektrotechnik-Absolvent Abdulkader Alnajjar im Interview</p>
-            <h2 class="text-uppercase mb-0">Studium und Karriere in Zwickau</h2>
-            <div class="row">
-              <div class="col-lg-10 ms-auto">
-                <p class="text-muted mt-4 mb-0">
-                  Unser Team wächst mit unseren Aufgaben. Deshalb suchen wir ständig qualifizierte Mitarbeiter, die uns tatkräftig unterstützen.
-                </p>
-              </div>
-            </div>
-            <div class="progress-circle position-relative my-3" id="pCircle">
-              <div
-                class="position-absolute text-center top-50 start-50 translate-middle d-flex flex-column"
-              >
-                <h6 class="h5 text-primary mb-0">15</h6>
-                <p class="text-small text-serif mb-0 text-muted">Stellenangebote </p>
-              </div>
-            </div>
-            <div class="d-block">
-              <a class="btn btn-primary px-4" href="">Karriere</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="col-lg-6 half-page-banner bg-cover bg-center order-1 order-lg-2"
-      >
-        <iframe
-          width="100%"
-          height="100%"
-          src="https://www.youtube.com/embed/3etSeccTvN8"
-        >
-        </iframe>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Become a Volunteer Section -->
-<section
-  class="bg-cover bg-fixed shadow-inner"
-  id="referenzen"
-  style="background: url(assets/img/header-1-d2347085.jpg)"
->
-  <div class="primary-overlay py-5">
-    <div class="overlay-content z-index-20 position-relative py-5">
-      <div class="container py-5 text-white text-center">
-        <p class="lead text-serif mb-1">
-          Überzeugen Sie sich selbst und besuchen Sie unsere abgeschlossenen Objekte oder stellen Sie uns ganz einfach auf die Probe.
-        </p>
-        <h2 class="text-xl text-shadow mb-4">Die Referenzen</h2>
-        <a class="btn btn-primary px-4" href="">Mehr Erfahren</a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- statements Section-->
-<section class="bg-primary-shade text-white py-5" id="events">
-  <div class="container text-center">
-    <div class="row align-items-center">
-      <div class="col-lg-3 text-lg-end mb-4 mb-lg-0">
-        <h3 class="mb-0 text-uppercase">Kunden Statements</h3>
-      </div>
-      <div class="col-lg-6 text-center mb-4 mb-lg-0">
-        <p class="text-serif">Ihr Planungspartner im Wohn- und Gewerbebau</p>
-      </div>
-      <div class="col-lg-3 text-lg-end">
-        <a class="btn btn-outline-light px-4" href="">Mehr Infos</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Contact Section-->
-<section class="py-5" id="contact">
-  <div class="container py-5">
-    <header class="mb-4 mb-5 text-center">
-      <p class="text-serif mb-0 text-primary">So kontaktieren Sie uns</p>
-      <h2 class="text-uppercase">Kontakt</h2>
-      <div class="row">
-        <div class="col-lg-7 mx-auto">
-          <p class="text-muted">
-            Haben Sie zu diesen Fragen oder wünschen Sie eine erste
-            unverbindliche Beratung, zögern Sie nicht, uns sofort zu
-            kontaktieren!
-          </p>
-        </div>
-      </div>
-    </header>
-    <div class="row align-items-stretch gx-0">
-      <div class="col-lg-6">
-        <div class="contact-img bg-center bg-cover">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10095.110437031806!2d12.6278494!3d50.7611572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9c2e51466f8f869d!2sM%20%26%20K%20Elektroplanung%20GmbH!5e0!3m2!1sen!2sde!4v1671647687552!5m2!1sen!2sde"
-            width="100%"
-            height="100%"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="bg-light p-5 h-100">
-          <h4>M & K Elektroplanung GmbH</h4>
-          <p class="text-muted">
-            Unsere Öffnungszeiten:<br />
-            Montag - Freitag : 9.00 - 17 Uhr
-          </p>
-          <ul class="list-unstyled mb-0 text-muted">
-            <li class="mb-2">
-              <a class="reset-anchor" href="tel:0372042344">
-                <i class="text-primary me-3 fas fa-phone"></i
-                ><span>037204 / 23 44</span></a
-              >
-            </li>
-            <li class="mb-2">
-              <a class="reset-anchor" href="fax:03720483610">
-                <i class="text-primary me-3 fas fa-fax"></i
-                ><span>037204 / 8 36 10</span></a
-              >
-            </li>
-            <li class="mb-2">
-              <a
-                class="reset-anchor"
-                href="https://goo.gl/maps/S2XYPV27eEajSyueA"
-              >
-                <i class="text-primary me-3 fas fa-globe-americas"></i
-                ><span>Glauchauer Str. 35D, 09350 Lichtenstein/Sachsen</span></a
-              >
-            </li>
-            <li class="mb-2">
-              <a class="reset-anchor" href="mailto:c.koehler@mk-elektro.de">
-                <i class="text-primary me-3 far fa-envelope"></i
-                ><span>info@mk-elektro.de</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Clients Section-->
-<section class="pb-5">
-  <div class="container pb-5">
-    <div class="row align-items-center text-center gy-2">
-      <div class="col-lg-3 col-sm-6">
-        <img src="assets/img/KNX_logo.svg.png" alt="..." width="120" />
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <img src="assets/img/KNX_logo.svg.png" alt="..." width="120" />
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <img src="assets/img/KNX_logo.svg.png" alt="..." width="120" />
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <img src="assets/img/KNX_logo.svg.png" alt="..." width="120" />
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Scroll Top Button--><a class="scroll-top" href="#"
-  ><i class="fas fa-long-arrow-alt-up"></i
-></a>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
