--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,4 @@
 .footer-dark {
-  padding: 50px 0;
   color: #f0f9ff;
   background-color: #282d32;
 }
@@ -86,4 +85,8 @@
   opacity: 0.3;
   font-size: 13px;
   margin-bottom: 0;
+}
+
+.footer-dark .copyright #imprint{
+  font-weight: bold;
 }
