add contact form

--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -51,13 +51,8 @@
         <li>engagiertes, kollegiales und professionelles Team</li>
         <li>flexible Arbeitszeiten</li>
       </ul>
-      <p class="mb-4">
-        Wir freuen uns auf Ihre aussagekräftige Bewerbung inklusive Ihrer Gehaltsvorstellung per Mail an <a href= "mailto:info@mk-elektro.de">info@mk-elektro.de</a>. Bei Rückfragen wenden Sie sich bitte an Dipl.-Ing. (FH) Carsten Köhler unter <a href="tel:0372042344">03 72 04 / 23 44</a>.
-      </p>
-      <p class="mb-4">
-        Aus Gründen der besseren Lesbarkeit wird auf die gleichzeitige Verwendung der weiblichen und männlichen Sprachform verzichtet. Selbstverständlich bezieht sich dieses Stellenangebot gleichermaßen auf weibliche und männliche Bewerber.
-      </p>
     </div>
+    <app-contact-form></app-contact-form>
   </div>
 </div>
 
